--- a/src/assets/scss/Header.scss
+++ b/src/assets/scss/Header.scss
@@ -1,5 +1,5 @@
 @mixin notify-count{
-      font-size: 15px;
+      font-size: 20px;
       background-color:rgba(63, 63, 70, 1);
       color: white;
       font-weight: 500;
@@ -12,7 +12,7 @@
       display: flex;
       flex-direction: row-reverse;
       align-items: center;
-      background-color: #FFFFFF;
+      background-color: #F5F5F5;
        padding: 10px;
        padding-left: 30px;
        padding-right: 30px;
