Subscription Page added

--- a/src/assets/scss/Header.scss
+++ b/src/assets/scss/Header.scss
@@ -12,7 +12,7 @@
       display: flex;
       flex-direction: row-reverse;
       align-items: center;
-      background-color: #F5F5F5;
+      background-color: #efeded;
        padding: 10px;
        padding-left: 30px;
        padding-right: 30px;
